[package]
edition = "2021"
name = "quix"
version = "0.0.1"
license = "Apache-2.0"
license-file = "LICENSE"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
base64 = "0.13.0"
clap = "3.2.8"
eventsource = "0.5.0"
home = "0.5.3"
human-panic = "1.0.3"
loggy = {path = "./libs/loggy"}
minifier = "0.2.1"
notify = "4.0.17"
reqwest = {version = "0.10.4", features = ["blocking", "json"]}
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
walkdir = "2.3.2"
zip = "0.6.2"
