[package]
edition = "2021"
keywords = ["vtex"]
license = "Apache-2.0"
name = "quix"
version = "0.0.1"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic
strip = true # Strip symbols from binary

[dependencies]
base64 = "0.13.0"
clap = "4.0.15"
debounce = "0.2.1"
eventsource = "0.5.0"
home = "0.5.4"
human-panic = "1.0.3"
loggy = {path = "./libs/loggy"}
minifier = "0.2.1"
notify = "5.0.0"
reqwest = {version = "0.10.4", features = ["blocking", "json"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
walkdir = "2.3.2"
zip = "0.6.3"
