[package]
authors = ["rafaelrcamargo"]
categories = ["log", "cli", "utility"]
description = "A modern, cool and nice lokkig logger"
edition = "2021"
homepage = "https://github.com/rafaelrcamargo/quix/tree/main/libs/loggy"
keywords = ["cli", "search", "demo"]
license = "Apache-2.0"
name = "loggy"
repository = "https://github.com/rafaelrcamargo/quix/tree/main/libs/loggy"
version = "0.0.1"

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
colored_json = "2.1.0"
exitcode = "1.1.2"
onig = { version = "6", default-features = false }
serde_json = "1.0.82"
