[package]
authors = ["rafaelrcamargo"]
categories = ["command-line-interface"]
description = "A modern, cool and nice looking logger for better DX on your CLI apps."
edition = "2021"
homepage = "https://github.com/rafaelrcamargo/quix/tree/main/libs/logi"
keywords = ["cli", "log", "logger", "logging", "DX"]
license = "Apache-2.0"
name = "logi"
readme = "README.md"
repository = "https://github.com/rafaelrcamargo/quix/tree/main/libs/logi"
version = "0.0.1"

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
colored_json = "2.1.0"
pcre2 = "0.2.3"
serde_json = "1.0.82"
